# hydra

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  hydra.entitlements  hydra.ios.entitlements  hydra.macos.entitlements
src/: CMakeLists.txt  common.hpp  emulation_context.cpp  emulation_context.hpp  main.cpp
src/common/: CMakeLists.txt  atomic.hpp  common.hpp  config.cpp  config.hpp  dynamic_pool.hpp  elf.h  filesystem.hpp  functions.hpp  hash.hpp  linked_list.hpp  literals.hpp  log.cpp  log.hpp  lz4.cpp  lz4.hpp  macros.hpp  memory.hpp  objc.hpp  optional_helper.hpp  platform.hpp  pool.hpp  range.hpp  small_cache.hpp  static_pool.hpp  stb.cpp  string.hpp  time.hpp  toml_helper.hpp  traits.hpp  type_aliases.hpp  types.hpp
src/common/allocators/: dynamic_pool.hpp  static_pool.hpp
src/common/io/: continuous_stream.hpp  iostream_stream.hpp  memory_stream.hpp  sparse_stream.hpp  stream.hpp  stream_view.hpp
src/common/logging/: log.cpp  log.hpp
src/core/: CMakeLists.txt  api.cpp  api.hpp  c_api.cpp  c_api.h  emulation_context.cpp  emulation_context.hpp  title.hpp
src/core/audio/: const.hpp  core.hpp  core_base.hpp  stream.hpp  stream_base.hpp
src/core/audio/cubeb/: const.hpp  core.cpp  core.hpp  stream.cpp  stream.hpp
src/core/audio/null/: core.cpp  core.hpp  stream.cpp  stream.hpp
src/core/debugger/: const.hpp  debugger.cpp  debugger.hpp  debugger_manager.cpp  debugger_manager.hpp  gdb_server.cpp  gdb_server.hpp
src/core/horizon/: cmif.hpp  const.hpp  display_driver.cpp  display_driver.hpp  firmware.cpp  firmware.hpp  hid.hpp  hipc.hpp  input_manager.cpp  input_manager.hpp  kernel.cpp  kernel.hpp  os.cpp  os.hpp  shared_memory.cpp  shared_memory.hpp  state_manager.cpp  state_manager.hpp  user_manager.cpp  user_manager.hpp
src/core/horizon/applets/: applet_base.cpp  applet_base.hpp  const.hpp  error_applet.cpp  error_applet.hpp  software_keyboard.cpp  software_keyboard.hpp
src/core/horizon/display/: binder.cpp  binder.hpp  display.cpp  display.hpp  driver.cpp  driver.hpp  layer.cpp  layer.hpp
src/core/horizon/filesystem/: const.hpp  content_archive.cpp  content_archive.hpp  device.cpp  device.hpp  directory.cpp  directory.hpp  disk_file.cpp  disk_file.hpp  entry.hpp  entry_base.hpp  file.cpp  file.hpp  file_base.hpp  file_view.hpp  filesystem.cpp  filesystem.hpp  host_file.cpp  host_file.hpp  memory_file.hpp  partition_filesystem.cpp  partition_filesystem.hpp  ram_file.hpp  romfs.cpp  romfs.hpp  sparse_file.hpp
src/core/horizon/kernel/: applet_resource.hpp  applet_state.cpp  applet_state.hpp  auto_object.hpp  cmif.hpp  code_memory.hpp  const.hpp  domain_service.cpp  domain_service.hpp  event.hpp  guest_thread.cpp  guest_thread.hpp  handle_pool.hpp  hipc.cpp  hipc.hpp  host_thread.cpp  host_thread.hpp  kernel.cpp  kernel.hpp  mutex.hpp  process.cpp  process.hpp  process_manager.cpp  process_manager.hpp  service_base.cpp  service_base.hpp  session.cpp  session.hpp  shared_memory.cpp  shared_memory.hpp  strong_ref.hpp  synchronization_object.cpp  synchronization_object.hpp  thread.cpp  thread.hpp  transfer_memory.hpp
src/core/horizon/loader/: extension.cpp  extension.hpp  extension_api.hpp  extension_manager.cpp  extension_manager.hpp  homebrew_loader.cpp  homebrew_loader.hpp  loader_base.cpp  loader_base.hpp  nca_loader.cpp  nca_loader.hpp  npdm.hpp  nro_loader.cpp  nro_loader.hpp  nso_loader.cpp  nso_loader.hpp  nsp_loader.cpp  nsp_loader.hpp  nx_loader.cpp  nx_loader.hpp  pfs0_loader.cpp  pfs0_loader.hpp  xci_loader.cpp  xci_loader.hpp
src/core/horizon/services/: const.cpp  const.hpp  domain_service.cpp  domain_service.hpp  server.cpp  server.hpp  service.cpp  service.hpp  service_base.cpp  service_base.hpp  session.cpp  session.hpp
src/core/horizon/ui/: const.hpp  handler_base.hpp
src/core/hw/: bus.hpp  generic_mmu.hpp
src/core/hw/display/: display.hpp  layer.hpp
src/core/input/: const.hpp  controller.hpp  cursor.hpp  cursor_base.hpp  device.hpp  device_base.hpp  device_list.hpp  device_list_base.hpp  device_manager.cpp  device_manager.hpp  keyboard.hpp  keyboard_base.hpp  npad_config.cpp  npad_config.hpp  profile.cpp  profile.hpp  state.hpp
src/core/input/apple_gc/: controller.hpp  controller.mm  device_list.hpp  device_list.mm  keyboard.hpp  keyboard.mm
src/frontend/: CMakeLists.txt  Info.plist.in  hydra.icns  window_base.cpp  window_base.hpp
src/frontend/native/cocoa/: native.hpp  native.mm
src/frontend/sdl3/: const.hpp  cursor.cpp  cursor.hpp  main.cpp  window.cpp  window.hpp
src/frontend/swiftui/: Api.swift  ContentView.swift  EmulationToolbarItems.swift  EmulationView.swift  Game.swift  GameExtractButton.swift  GameIconView.swift  GameListToolbarItems.swift  GameListView.swift  GamePreview.swift  GamePreviewContainer.swift  GameStopView.swift  GridGamePreview.swift  HydraApp.swift  ListGamePreview.swift  MenuCommands.swift  MetalView.swift  ToolbarItems.swift  bridging_header.h
src/frontend/swiftui/Settings/: AudioSettingsView.swift  CpuSettingsView.swift  DebugSettingsView.swift  (+13 more)
src/frontend/window/: window_base.cpp  window_base.hpp
src/horizon/: cmif.hpp  const.hpp  hid.hpp  hipc.hpp  horizon.cpp  horizon.hpp  input_manager.cpp  input_manager.hpp  kernel.cpp  kernel.hpp  os.cpp  os.hpp  shared_memory.cpp  shared_memory.hpp  state_manager.cpp  state_manager.hpp
src/horizon/filesystem/: directory.cpp  directory.hpp  entry_base.hpp  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp
src/horizon/loader/: loader_base.hpp  nca_loader.cpp  nca_loader.hpp  nro_loader.cpp  nro_loader.hpp  nso_loader.cpp  nso_loader.hpp
src/horizon/services/: domain_service.cpp  domain_service.hpp  fsp_srv.cpp  fsp_srv.hpp  hid.cpp  hid.hpp  service.cpp  service.hpp  service_base.cpp  service_base.hpp  sm.cpp  sm.hpp
src/hw/: bus.hpp  generic_mmu.hpp
src/hw/cpu/: cpu.hpp
src/hw/display/: display.hpp  display_base.hpp  layer_base.hpp
src/hw/mmu/: memory.cpp  memory.hpp  mmu.cpp  mmu.hpp
src/hypervisor/: const.hpp  hypervisor.cpp  hypervisor.hpp
src/util/allocators/: dynamic_pool.hpp  static_pool.hpp
(+940 files in other folders)
