add_executable(hydra
    main.cpp
    emulation_context.cpp
    emulation_context.hpp
    common/common.hpp
    common/types.hpp
    common/macros.hpp
    common/functions.hpp
    common/logging/log.cpp
    common/logging/log.hpp
    common/allocators/static_pool.hpp
    common/allocators/dynamic_pool.hpp
    horizon/os.cpp
    horizon/os.hpp
    horizon/const.hpp
    horizon/hipc.hpp
    horizon/cmif.hpp
    horizon/kernel.cpp
    horizon/kernel.hpp
    horizon/services/service_base.cpp
    horizon/services/service_base.hpp
    horizon/services/domain_service.cpp
    horizon/services/domain_service.hpp
    horizon/services/sm/user_interface.cpp
    horizon/services/sm/user_interface.hpp
    horizon/services/hid/applet_resource.cpp
    horizon/services/hid/applet_resource.hpp
    horizon/services/hid/hid_server.cpp
    horizon/services/hid/hid_server.hpp
    horizon/services/fssrv/file.cpp
    horizon/services/fssrv/file.hpp
    horizon/services/fssrv/directory.cpp
    horizon/services/fssrv/directory.hpp
    horizon/services/fssrv/filesystem.cpp
    horizon/services/fssrv/filesystem.hpp
    horizon/services/fssrv/filesystem_proxy.cpp
    horizon/services/fssrv/filesystem_proxy.hpp
    horizon/services/timesrv/static_service.cpp
    horizon/services/timesrv/static_service.hpp
    horizon/services/timesrv/system_clock.cpp
    horizon/services/timesrv/system_clock.hpp
    horizon/services/timesrv/steady_clock.cpp
    horizon/services/timesrv/steady_clock.hpp
    horizon/services/timesrv/time_zone_service.cpp
    horizon/services/timesrv/time_zone_service.hpp
    horizon/services/nvdrv/ioctl/fd_base.hpp
    horizon/services/nvdrv/ioctl/channel_base.cpp
    horizon/services/nvdrv/ioctl/channel_base.hpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl.cpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl.hpp
    horizon/services/nvdrv/ioctl/nvmap.cpp
    horizon/services/nvdrv/ioctl/nvmap.hpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_as_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_as_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_gpu.hpp
    horizon/services/nvdrv/const.hpp
    horizon/services/nvdrv/nvdrv_services.cpp
    horizon/services/nvdrv/nvdrv_services.hpp
    horizon/services/settings/system_settings_server.cpp
    horizon/services/settings/system_settings_server.hpp
    horizon/services/am/const.hpp
    horizon/services/am/apm_manager.cpp
    horizon/services/am/apm_manager.hpp
    horizon/services/am/common_state_getter.cpp
    horizon/services/am/common_state_getter.hpp
    horizon/services/am/application_proxy_service.cpp
    horizon/services/am/application_proxy_service.hpp
    horizon/services/am/application_proxy.cpp
    horizon/services/am/application_proxy.hpp
    horizon/services/visrv/display_service_base.cpp
    horizon/services/visrv/display_service_base.hpp
    horizon/services/visrv/system_display_service.cpp
    horizon/services/visrv/system_display_service.hpp
    horizon/services/visrv/manager_display_service.cpp
    horizon/services/visrv/manager_display_service.hpp
    horizon/services/visrv/application_display_service.cpp
    horizon/services/visrv/application_display_service.hpp
    horizon/services/visrv/manager_root_service.cpp
    horizon/services/visrv/manager_root_service.hpp
    horizon/services/hosbinder/hos_binder_driver.cpp
    horizon/services/hosbinder/hos_binder_driver.hpp
    horizon/services/pl/sharedresource/platform_shared_resource_manager.cpp
    horizon/services/pl/sharedresource/platform_shared_resource_manager.hpp
    horizon/services/psm/psm_server.cpp
    horizon/services/psm/psm_server.hpp
    hw/generic_mmu.hpp
    hw/tegra_x1/cpu/memory.cpp
    hw/tegra_x1/cpu/memory.hpp
    hw/tegra_x1/cpu/mmu_base.hpp
    hw/tegra_x1/cpu/thread_base.hpp
    hw/tegra_x1/cpu/cpu_base.hpp
    hw/tegra_x1/cpu/hypervisor/const.hpp
    hw/tegra_x1/cpu/hypervisor/page_table.cpp
    hw/tegra_x1/cpu/hypervisor/page_table.hpp
    hw/tegra_x1/cpu/hypervisor/mmu.cpp
    hw/tegra_x1/cpu/hypervisor/mmu.hpp
    hw/tegra_x1/cpu/hypervisor/thread.cpp
    hw/tegra_x1/cpu/hypervisor/thread.hpp
    hw/tegra_x1/cpu/hypervisor/cpu.cpp
    hw/tegra_x1/cpu/hypervisor/cpu.hpp
    hw/tegra_x1/gpu/const.cpp
    hw/tegra_x1/gpu/const.hpp
    hw/tegra_x1/gpu/gpu_mmu.cpp
    hw/tegra_x1/gpu/gpu_mmu.hpp
    hw/tegra_x1/gpu/pfifo.cpp
    hw/tegra_x1/gpu/pfifo.hpp
    hw/tegra_x1/gpu/buffer_cache.cpp
    hw/tegra_x1/gpu/buffer_cache.hpp
    hw/tegra_x1/gpu/texture_decoder.cpp
    hw/tegra_x1/gpu/texture_decoder.hpp
    hw/tegra_x1/gpu/texture_cache.cpp
    hw/tegra_x1/gpu/texture_cache.hpp
    hw/tegra_x1/gpu/render_pass_cache.cpp
    hw/tegra_x1/gpu/render_pass_cache.hpp
    hw/tegra_x1/gpu/shader_cache.cpp
    hw/tegra_x1/gpu/shader_cache.hpp
    hw/tegra_x1/gpu/pipeline_cache.cpp
    hw/tegra_x1/gpu/pipeline_cache.hpp
    hw/tegra_x1/gpu/gpu.cpp
    hw/tegra_x1/gpu/gpu.hpp
    hw/tegra_x1/gpu/engines/const.hpp
    hw/tegra_x1/gpu/engines/engine_base.hpp
    hw/tegra_x1/gpu/engines/3d.cpp
    hw/tegra_x1/gpu/engines/3d.hpp
    hw/tegra_x1/gpu/engines/inline.cpp
    hw/tegra_x1/gpu/engines/inline.hpp
    hw/tegra_x1/gpu/engines/2d.cpp
    hw/tegra_x1/gpu/engines/2d.hpp
    hw/tegra_x1/gpu/macro/const.hpp
    hw/tegra_x1/gpu/macro/driver_base.cpp
    hw/tegra_x1/gpu/macro/driver_base.hpp
    hw/tegra_x1/gpu/macro/interpreter/driver.cpp
    hw/tegra_x1/gpu/macro/interpreter/driver.hpp
    hw/tegra_x1/gpu/renderer/const.hpp
    hw/tegra_x1/gpu/renderer/buffer_base.hpp
    hw/tegra_x1/gpu/renderer/texture_base.hpp
    hw/tegra_x1/gpu/renderer/render_pass_base.hpp
    hw/tegra_x1/gpu/renderer/shader_base.hpp
    hw/tegra_x1/gpu/renderer/pipeline_base.hpp
    hw/tegra_x1/gpu/renderer/renderer_base.hpp
    hw/tegra_x1/gpu/renderer/metal/const.hpp
    hw/tegra_x1/gpu/renderer/metal/maxwell_to_mtl.cpp
    hw/tegra_x1/gpu/renderer/metal/maxwell_to_mtl.hpp
    hw/tegra_x1/gpu/renderer/metal/impl.cpp
    hw/tegra_x1/gpu/renderer/metal/buffer.cpp
    hw/tegra_x1/gpu/renderer/metal/buffer.hpp
    hw/tegra_x1/gpu/renderer/metal/texture.cpp
    hw/tegra_x1/gpu/renderer/metal/texture.hpp
    hw/tegra_x1/gpu/renderer/metal/render_pass.cpp
    hw/tegra_x1/gpu/renderer/metal/render_pass.hpp
    hw/tegra_x1/gpu/renderer/metal/shader.cpp
    hw/tegra_x1/gpu/renderer/metal/shader.hpp
    hw/tegra_x1/gpu/renderer/metal/pipeline.cpp
    hw/tegra_x1/gpu/renderer/metal/pipeline.hpp
    hw/tegra_x1/gpu/renderer/metal/clear_color_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/clear_color_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/renderer.cpp
    hw/tegra_x1/gpu/renderer/metal/renderer.hpp
    hw/display/layer.hpp
    hw/display/display.hpp
    hw/bus.hpp
    frontend/window/sdl3/const.hpp
    frontend/window/sdl3/window.cpp
    frontend/window/sdl3/window.hpp
    frontend/window/window_base.cpp
    frontend/window/window_base.hpp
)

target_include_directories(hydra PRIVATE . /Users/samuliak/Documents/nx-parser/src) # TODO: dependencies directory
target_link_libraries(hydra PUBLIC "-framework Foundation" "-framework Hypervisor" "-framework Metal" "-framework QuartzCore" nx-parser fmt::fmt SDL3::SDL3 glfw)

# Signing
set(CODESIGN_IDENTITY "Apple Development: samuliak@icloud.com (RMHRRGUDTQ)") # TODO: don't hardcode
set(ENTITLEMENTS_FILE "${PROJECT_SOURCE_DIR}/hydra.entitlements")

add_custom_command(TARGET hydra POST_BUILD VERBATIM
    COMMAND codesign --force --sign "${CODESIGN_IDENTITY}" --entitlements ${ENTITLEMENTS_FILE} --timestamp --options runtime "$<TARGET_FILE:hydra>"
    COMMENT "Signing hydra with entitlements"
)
