add_executable(hydra
    main.cpp
    emulation_context.cpp
    emulation_context.hpp
    common/common.hpp
    common/types.hpp
    common/macros.hpp
    common/functions.hpp
    common/lz4.cpp
    common/lz4.hpp
    common/logging/log.cpp
    common/logging/log.hpp
    common/allocators/static_pool.hpp
    common/allocators/dynamic_pool.hpp
    horizon/const.hpp
    horizon/hid.hpp
    horizon/state_manager.cpp
    horizon/state_manager.hpp
    horizon/input_manager.cpp
    horizon/input_manager.hpp
    horizon/os.cpp
    horizon/os.hpp
    horizon/hipc.hpp
    horizon/cmif.hpp
    horizon/shared_memory.cpp
    horizon/shared_memory.hpp
    horizon/kernel.cpp
    horizon/kernel.hpp
    horizon/filesystem/entry_base.hpp
    horizon/filesystem/file.cpp
    horizon/filesystem/file.hpp
    horizon/filesystem/directory.cpp
    horizon/filesystem/directory.hpp
    horizon/filesystem/filesystem.cpp
    horizon/filesystem/filesystem.hpp
    horizon/loader/loader_base.hpp
    horizon/loader/nro_loader.cpp
    horizon/loader/nro_loader.hpp
    horizon/loader/nso_loader.cpp
    horizon/loader/nso_loader.hpp
    horizon/loader/nca_loader.cpp
    horizon/loader/nca_loader.hpp
    horizon/services/service_base.cpp
    horizon/services/service_base.hpp
    horizon/services/domain_service.cpp
    horizon/services/domain_service.hpp
    horizon/services/sm/user_interface.cpp
    horizon/services/sm/user_interface.hpp
    horizon/services/hid/applet_resource.cpp
    horizon/services/hid/applet_resource.hpp
    horizon/services/hid/hid_server.cpp
    horizon/services/hid/hid_server.hpp
    horizon/services/fssrv/storage.cpp
    horizon/services/fssrv/storage.hpp
    horizon/services/fssrv/file.cpp
    horizon/services/fssrv/file.hpp
    horizon/services/fssrv/directory.cpp
    horizon/services/fssrv/directory.hpp
    horizon/services/fssrv/filesystem.cpp
    horizon/services/fssrv/filesystem.hpp
    horizon/services/fssrv/filesystem_proxy.cpp
    horizon/services/fssrv/filesystem_proxy.hpp
    horizon/services/timesrv/static_service.cpp
    horizon/services/timesrv/static_service.hpp
    horizon/services/timesrv/system_clock.cpp
    horizon/services/timesrv/system_clock.hpp
    horizon/services/timesrv/steady_clock.cpp
    horizon/services/timesrv/steady_clock.hpp
    horizon/services/timesrv/time_zone_service.cpp
    horizon/services/timesrv/time_zone_service.hpp
    horizon/services/nvdrv/ioctl/fd_base.hpp
    horizon/services/nvdrv/ioctl/channel_base.cpp
    horizon/services/nvdrv/ioctl/channel_base.hpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl.cpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl.hpp
    horizon/services/nvdrv/ioctl/nvmap.cpp
    horizon/services/nvdrv/ioctl/nvmap.hpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_ctrl_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_as_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_as_gpu.hpp
    horizon/services/nvdrv/ioctl/nvhost_gpu.cpp
    horizon/services/nvdrv/ioctl/nvhost_gpu.hpp
    horizon/services/nvdrv/const.hpp
    horizon/services/nvdrv/nvdrv_services.cpp
    horizon/services/nvdrv/nvdrv_services.hpp
    horizon/services/settings/settings_server.cpp
    horizon/services/settings/settings_server.hpp
    horizon/services/settings/system_settings_server.cpp
    horizon/services/settings/system_settings_server.hpp
    horizon/services/am/apm_manager.cpp
    horizon/services/am/apm_manager.hpp
    horizon/services/am/application_proxy_service.cpp
    horizon/services/am/application_proxy_service.hpp
    horizon/services/am/common_state_getter.cpp
    horizon/services/am/common_state_getter.hpp
    horizon/services/am/self_controller.cpp
    horizon/services/am/self_controller.hpp
    horizon/services/am/window_controller.cpp
    horizon/services/am/window_controller.hpp
    horizon/services/am/audio_controller.cpp
    horizon/services/am/audio_controller.hpp
    horizon/services/am/display_controller.cpp
    horizon/services/am/display_controller.hpp
    horizon/services/am/library_applet_creator.cpp
    horizon/services/am/library_applet_creator.hpp
    horizon/services/am/application_functions.cpp
    horizon/services/am/application_functions.hpp
    horizon/services/am/debug_functions.cpp
    horizon/services/am/debug_functions.hpp
    horizon/services/am/application_proxy.cpp
    horizon/services/am/application_proxy.hpp
    horizon/services/am/storage.cpp
    horizon/services/am/storage.hpp
    horizon/services/am/storage_accessor.cpp
    horizon/services/am/storage_accessor.hpp
    horizon/services/am/session.cpp
    horizon/services/am/session.hpp
    horizon/services/visrv/display_service_base.cpp
    horizon/services/visrv/display_service_base.hpp
    horizon/services/visrv/system_display_service.cpp
    horizon/services/visrv/system_display_service.hpp
    horizon/services/visrv/manager_display_service.cpp
    horizon/services/visrv/manager_display_service.hpp
    horizon/services/visrv/application_display_service.cpp
    horizon/services/visrv/application_display_service.hpp
    horizon/services/visrv/manager_root_service.cpp
    horizon/services/visrv/manager_root_service.hpp
    horizon/services/hosbinder/hos_binder_driver.cpp
    horizon/services/hosbinder/hos_binder_driver.hpp
    horizon/services/pl/sharedresource/platform_shared_resource_manager.cpp
    horizon/services/pl/sharedresource/platform_shared_resource_manager.hpp
    horizon/services/psm/psm_server.cpp
    horizon/services/psm/psm_server.hpp
    horizon/services/lm/log_service.cpp
    horizon/services/lm/log_service.hpp
    horizon/services/lm/logger.cpp
    horizon/services/lm/logger.hpp
    horizon/services/aocsrv/add_on_content_manager.cpp
    horizon/services/aocsrv/add_on_content_manager.hpp
    horizon/services/pctl/ipc/parental_control_service.cpp
    horizon/services/pctl/ipc/parental_control_service.hpp
    horizon/services/pctl/ipc/parental_control_service_factory.cpp
    horizon/services/pctl/ipc/parental_control_service_factory.hpp
    horizon/services/account/profile.cpp
    horizon/services/account/profile.hpp
    horizon/services/account/account_service_for_application.cpp
    horizon/services/account/account_service_for_application.hpp
    horizon/services/account/account_service_for_system_service.cpp
    horizon/services/account/account_service_for_system_service.hpp
    horizon/services/apm/manager_privileged.cpp
    horizon/services/apm/manager_privileged.hpp
    horizon/services/apm/session.cpp
    horizon/services/apm/session.hpp
    horizon/services/socket/client.cpp
    horizon/services/socket/client.hpp
    horizon/services/audio/audio_out.cpp
    horizon/services/audio/audio_out.hpp
    horizon/services/audio/audio_out_manager.cpp
    horizon/services/audio/audio_out_manager.hpp
    hw/generic_mmu.hpp
    hw/tegra_x1/cpu/const.hpp
    hw/tegra_x1/cpu/memory_base.hpp
    hw/tegra_x1/cpu/mmu_base.cpp
    hw/tegra_x1/cpu/mmu_base.hpp
    hw/tegra_x1/cpu/thread_base.hpp
    hw/tegra_x1/cpu/cpu_base.cpp
    hw/tegra_x1/cpu/cpu_base.hpp
    hw/tegra_x1/cpu/hypervisor/const.hpp
    hw/tegra_x1/cpu/hypervisor/page_allocator.cpp
    hw/tegra_x1/cpu/hypervisor/page_allocator.hpp
    hw/tegra_x1/cpu/hypervisor/page_table.cpp
    hw/tegra_x1/cpu/hypervisor/page_table.hpp
    hw/tegra_x1/cpu/hypervisor/memory.hpp
    hw/tegra_x1/cpu/hypervisor/mmu.cpp
    hw/tegra_x1/cpu/hypervisor/mmu.hpp
    hw/tegra_x1/cpu/hypervisor/thread.cpp
    hw/tegra_x1/cpu/hypervisor/thread.hpp
    hw/tegra_x1/cpu/hypervisor/cpu.cpp
    hw/tegra_x1/cpu/hypervisor/cpu.hpp
    hw/tegra_x1/gpu/const.hpp
    hw/tegra_x1/gpu/gpu_mmu.cpp
    hw/tegra_x1/gpu/gpu_mmu.hpp
    hw/tegra_x1/gpu/pfifo.cpp
    hw/tegra_x1/gpu/pfifo.hpp
    hw/tegra_x1/gpu/gpu.cpp
    hw/tegra_x1/gpu/gpu.hpp
    hw/tegra_x1/gpu/engines/const.hpp
    hw/tegra_x1/gpu/engines/engine_base.hpp
    hw/tegra_x1/gpu/engines/3d.cpp
    hw/tegra_x1/gpu/engines/3d.hpp
    hw/tegra_x1/gpu/engines/compute.cpp
    hw/tegra_x1/gpu/engines/compute.hpp
    hw/tegra_x1/gpu/engines/inline.cpp
    hw/tegra_x1/gpu/engines/inline.hpp
    hw/tegra_x1/gpu/engines/2d.cpp
    hw/tegra_x1/gpu/engines/2d.hpp
    hw/tegra_x1/gpu/engines/copy.cpp
    hw/tegra_x1/gpu/engines/copy.hpp
    hw/tegra_x1/gpu/macro/const.hpp
    hw/tegra_x1/gpu/macro/driver_base.cpp
    hw/tegra_x1/gpu/macro/driver_base.hpp
    hw/tegra_x1/gpu/macro/interpreter/driver.cpp
    hw/tegra_x1/gpu/macro/interpreter/driver.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/const.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/tables.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/observer_base.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/analyzer.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/analyzer.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/builder_base.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decompiler.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/decompiler.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/builder_base.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/lang/lang_builder_base.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/lang/lang_builder_base.hpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/lang/msl/builder.cpp
    hw/tegra_x1/gpu/renderer/shader_decompiler/lang/msl/builder.hpp
    hw/tegra_x1/gpu/renderer/buffer_cache.cpp
    hw/tegra_x1/gpu/renderer/buffer_cache.hpp
    hw/tegra_x1/gpu/renderer/texture_decoder.cpp
    hw/tegra_x1/gpu/renderer/texture_decoder.hpp
    hw/tegra_x1/gpu/renderer/texture_cache.cpp
    hw/tegra_x1/gpu/renderer/texture_cache.hpp
    hw/tegra_x1/gpu/renderer/render_pass_cache.cpp
    hw/tegra_x1/gpu/renderer/render_pass_cache.hpp
    hw/tegra_x1/gpu/renderer/shader_cache.cpp
    hw/tegra_x1/gpu/renderer/shader_cache.hpp
    hw/tegra_x1/gpu/renderer/pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/const.cpp
    hw/tegra_x1/gpu/renderer/const.hpp
    hw/tegra_x1/gpu/renderer/buffer_base.hpp
    hw/tegra_x1/gpu/renderer/texture_base.hpp
    hw/tegra_x1/gpu/renderer/render_pass_base.hpp
    hw/tegra_x1/gpu/renderer/shader_base.hpp
    hw/tegra_x1/gpu/renderer/pipeline_base.hpp
    hw/tegra_x1/gpu/renderer/renderer_base.hpp
    hw/tegra_x1/gpu/renderer/metal/const.hpp
    hw/tegra_x1/gpu/renderer/metal/maxwell_to_mtl.cpp
    hw/tegra_x1/gpu/renderer/metal/maxwell_to_mtl.hpp
    hw/tegra_x1/gpu/renderer/metal/impl.cpp
    hw/tegra_x1/gpu/renderer/metal/buffer.cpp
    hw/tegra_x1/gpu/renderer/metal/buffer.hpp
    hw/tegra_x1/gpu/renderer/metal/texture.cpp
    hw/tegra_x1/gpu/renderer/metal/texture.hpp
    hw/tegra_x1/gpu/renderer/metal/render_pass.cpp
    hw/tegra_x1/gpu/renderer/metal/render_pass.hpp
    hw/tegra_x1/gpu/renderer/metal/shader.cpp
    hw/tegra_x1/gpu/renderer/metal/shader.hpp
    hw/tegra_x1/gpu/renderer/metal/pipeline.cpp
    hw/tegra_x1/gpu/renderer/metal/pipeline.hpp
    hw/tegra_x1/gpu/renderer/metal/depth_stencil_state_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/depth_stencil_state_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/blit_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/blit_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/clear_color_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/clear_color_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/clear_depth_pipeline_cache.cpp
    hw/tegra_x1/gpu/renderer/metal/clear_depth_pipeline_cache.hpp
    hw/tegra_x1/gpu/renderer/metal/renderer.cpp
    hw/tegra_x1/gpu/renderer/metal/renderer.hpp
    hw/display/layer.hpp
    hw/display/display.hpp
    hw/bus.hpp
    frontend/window/sdl3/const.hpp
    frontend/window/sdl3/window.cpp
    frontend/window/sdl3/window.hpp
    frontend/window/window_base.cpp
    frontend/window/window_base.hpp
)

target_include_directories(hydra PRIVATE . /Users/samuliak/Documents/nx-parser/src) # TODO: dependencies directory
target_link_libraries(hydra PUBLIC "-framework Foundation" "-framework Hypervisor" "-framework Metal" "-framework QuartzCore" fmt::fmt SDL3::SDL3 glfw)

# Signing
set(ENTITLEMENTS_FILE "${PROJECT_SOURCE_DIR}/hydra.entitlements")

add_custom_command(TARGET hydra POST_BUILD VERBATIM
    COMMAND codesign --force --sign "${CODESIGN_IDENTITY}" --entitlements ${ENTITLEMENTS_FILE} --timestamp --options runtime "$<TARGET_FILE:hydra>"
    COMMENT "Signing hydra with entitlements"
)
